--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ The Projects Section
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-          <em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in Communications (JSAC), IEEE Communication Letters </em>        </p>
+          <em>INFOCOM 2020-2024, MobiCom 2024, MEDES 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in Communications (JSAC), IEEE Communication Letters </em>        </p>
   </div>
 
 <!-- 
