--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
+      <p><li> <strong> 10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong>
       <p><li> <strong> 09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong>
       <p><li> <strong> 07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong>
       <p><li> <strong> 05/2024, invited to be a TPC member of IEEE MSN 2024.</strong>
