--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
     <div class="w3-container w3-center w3-padding-32" id="home">
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/xiao_round_um_2.png">
       <h1><a>Xiao Zhang</a></h1>
+
+        <p class="w3-center">
+          <a> Office: CIS 212</a> &nbsp/&nbsp
+          <a> Lab: CIS 108</a> &nbsp/&nbsp 
+          <a href="mailto:zhanxiao@umich.edu">Umich Email</a> &nbsp
+        </p>
+
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
           I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>, where I lead the Trustworthy AIoT Lab (<strong>TAI Lab</strong>). Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, my M.S. degree at Northwestern Polytechnical University and B.E. degree with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #ff0000" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
         </p>
@@ -105,9 +112,6 @@
         </p> -->
 
         <p class="w3-center">
-          <!-- <a href="mailto:zhan1387@msu.edu">MSU Email</a> &nbsp/&nbsp
-          <a href="mailto:xiao.zhang@duke.edu">Duke Email</a> &nbsp/&nbsp -->
-          <a href="mailto:zhanxiao@umich.edu">Umich Email</a> &nbsp/&nbsp
           <a href="https://scholar.google.com/citations?user=TIFjEXIAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
           <a href="https://experts.umich.edu/13121-xiao-zhang">Michigan Experts</a> &nbsp
         </p>
