--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
       <h1><a>Xiao Zhang</a></h1>
 
         <p class="w3-center">
-          <a> Office: CIS 212</a> &nbsp/&nbsp
-          <a> Lab: CIS 108</a> &nbsp/&nbsp 
-          <a href="mailto:zhanxiao@umich.edu">Umich Email</a> &nbsp
+          <a> Office: CIS 212</a> &nbsp | &nbsp
+          <a> Lab: CIS 108</a> &nbsp
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
@@ -112,6 +111,7 @@
         </p> -->
 
         <p class="w3-center">
+          <a href="mailto:zhanxiao@umich.edu">Umich Email</a>&nbsp/&nbsp
           <a href="https://scholar.google.com/citations?user=TIFjEXIAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
           <a href="https://experts.umich.edu/13121-xiao-zhang">Michigan Experts</a> &nbsp
         </p>
