--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         </p> -->
 
         <p class="w3-center">
-          <a href="mailto:zhanxiao@umich.edu">Umich Email</a>&nbsp/
-          <a href="https://scholar.google.com/citations?user=TIFjEXIAAAAJ&hl=en&oi=ao">Google Scholar</a>&nbsp/
-          <a href="https://experts.umich.edu/13121-xiao-zhang">Michigan Experts</a>&nbsp
+          <a href="mailto:zhanxiao@umich.edu">Email</a>/
+          <a href="https://scholar.google.com/citations?user=TIFjEXIAAAAJ&hl=en&oi=ao">Google Scholar</a>/
+          <a href="https://experts.umich.edu/13121-xiao-zhang">Michigan Experts</a>
         </p>
         </tbody></table>
   </div>
