--- a/index.html
+++ b/index.html
@@ -452,9 +452,9 @@ The Projects Section
         <p>
           <li>At UM-Dearborn
           <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          CIS 400 Programming Languages  2024 Fall
+          CIS 400 Programming Languages  
           <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          CIS 437/537 Advanced Networking  2025 Winter  
+          CIS 437/537 Advanced Networking    
           </p>
 
           <p>
@@ -501,8 +501,8 @@ The Projects Section
             Deniz Acikbas
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Soham Naik 
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <!-- Alan Raj
+            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Alan Raj
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Zaynab Mourtada
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
@@ -510,8 +510,8 @@ The Projects Section
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Areeba Mirza
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <!-- Jason Grose
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+            Jason Grose
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Mohammed
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Christian Nwobu
@@ -561,7 +561,7 @@ The Projects Section
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-          <em>ICSC 2025, INFOCOM 2020-2024, MobiCom 2024, MEDES 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in Communications (JSAC), IEEE Communication Letters </em>        </p>
+          <em>ICSC 2025, INFOCOM 2020-2024, MobiCom 2024, MEDES 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in Communications (JSAC), ACM Transactions on Cyber-Physical Systems, IEEE Communication Letters </em>        </p>
   </div>
 
 <!-- 
