--- a/index.html
+++ b/index.html
@@ -501,16 +501,16 @@ The Projects Section
             Deniz Acikbas
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Soham Naik 
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Alan Raj
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Zaynab Mourtada
+            Zaynab Mourtada -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Qasem
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Areeba Mirza
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Jason Grose
+            Jason Grose -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Mohammed
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
