--- a/index.html
+++ b/index.html
@@ -121,16 +121,21 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
-      <p><li> <strong> 01/2025, invited to be a TPC member of IEEE INFOCOM DeepWireless 2025.</strong>
-      <p><li> <strong> 10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong>
-      <p><li> <strong> 09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong>
-      <p><li> <strong> 07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong>
-      <p><li> <strong> 05/2024, invited to be a TPC member of IEEE MSN 2024.</strong>
-      <p><li> <strong> 09/2023, joined Duke University as a Postdoctoral Associate.</strong> 
-      <p><li> <strong> 05/2023, successfully defended my Ph.D. thesis. </strong> 
-      <p><li> <strong> 09/2022, passed comprehensive exam.</strong>  
-      <p><li> <strong> 01/2020, passed qualification exam.</strong>  
-      <p><li> <strong> 01/2019, started PhD journey.</strong> 
+   <ul id="news-list">
+      <li><strong>01/2025, invited to be a TPC member of IEEE INFOCOM DeepWireless 2025.</strong></li>
+      <li><strong>10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong></li>
+      <li><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
+      <li><strong>07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong></li>
+      <li><strong>05/2024, invited to be a TPC member of IEEE MSN 2024.</strong></li>
+      <li class="more-news" style="display:none;"><strong>09/2023, joined Duke University as a Postdoctoral Associate.</strong></li>
+      <li class="more-news" style="display:none;"><strong>05/2023, successfully defended my Ph.D. thesis.</strong></li>
+      <li class="more-news" style="display:none;"><strong>09/2022, passed comprehensive exam.</strong></li>
+      <li class="more-news" style="display:none;"><strong>01/2020, passed qualification exam.</strong></li>
+      <li class="more-news" style="display:none;"><strong>01/2019, started PhD journey.</strong></li>
+      <button id="toggle-btn" class="w3-button w3-black w3-margin-top" onclick="toggleNews()">More</button>
+
+   </ul>
+
   </div> 
    	  <!-- <p><li> 02/2022, Our suvery paper on vision transformer has been accepted by <a href="https://arxiv.org/pdf/2012.12556">IEEE TPAMI</a>.</li></p> -->
       <!-- <p><li> 09/2021, 10 papers have been accepted by <a href="https://nips.cc/Conferences/2021">NeurIPS 2021</a>.</li></p>
@@ -625,6 +630,17 @@ function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
   document.getElementById("myOverlay").style.display = "none";
 }
+
+  let expanded = false;
+  function toggleNews() {
+    const moreItems = document.querySelectorAll('.more-news');
+    moreItems.forEach(item => {
+      item.style.display = expanded ? 'none' : 'list-item';
+    });
+    document.getElementById('toggle-btn').innerText = expanded ? 'More' : 'Less';
+    expanded = !expanded;
+  }
+  
 </script>
 
 </body>
