--- a/index.html
+++ b/index.html
@@ -132,11 +132,28 @@
       <li class="more-news" style="display:none;"><strong>09/2022, passed comprehensive exam.</strong></li>
       <li class="more-news" style="display:none;"><strong>01/2020, passed qualification exam.</strong></li>
       <li class="more-news" style="display:none;"><strong>01/2019, started PhD journey.</strong></li>
-      <button id="toggle-btn" class="w3-button w3-black w3-margin-top" onclick="toggleNews()">More</button>
-
+      
    </ul>
-
+   <button id="toggle-btn" class="w3-button w3-black w3-margin-top" onclick="toggleNews()">More</button>
   </div> 
+
+  <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const btn = document.getElementById("toggle-btn");
+    let expanded = false;
+    btn.addEventListener("click", function () {
+      const moreItems = document.querySelectorAll(".more-news");
+      moreItems.forEach(item => {
+        item.style.display = expanded ? "none" : "list-item";
+      });
+      btn.textContent = expanded ? "More" : "Less";
+      expanded = !expanded;
+    });
+  });
+</script>
+
+
+
    	  <!-- <p><li> 02/2022, Our suvery paper on vision transformer has been accepted by <a href="https://arxiv.org/pdf/2012.12556">IEEE TPAMI</a>.</li></p> -->
       <!-- <p><li> 09/2021, 10 papers have been accepted by <a href="https://nips.cc/Conferences/2021">NeurIPS 2021</a>.</li></p>
       <p><li> 09/2021, The journal version of versatile filters has been accepted by <a href="https://ieeexplore.ieee.org/iel7/34/4359286/09543586.pdf">IEEE TPAMI</a>.</li></p>
@@ -631,16 +648,6 @@ function w3_close() {
   document.getElementById("myOverlay").style.display = "none";
 }
 
-  let expanded = false;
-  function toggleNews() {
-    const moreItems = document.querySelectorAll('.more-news');
-    moreItems.forEach(item => {
-      item.style.display = expanded ? 'none' : 'list-item';
-    });
-    document.getElementById('toggle-btn').innerText = expanded ? 'More' : 'Less';
-    expanded = !expanded;
-  }
-  
 </script>
 
 </body>
