--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
       <li class="more-news" style="display:none;"><strong>01/2019, started PhD journey.</strong></li>
       
    </ul>
-   <button id="toggle-btn" class="w3-button w3-black w3-margin-top" onclick="toggleNews()">More</button>
+      <button id="toggle-btn" class="w3-button w3-margin-top" style="background: transparent; border: none; color: #447ec9; cursor: pointer;">
+        + more
+      </button>
   </div> 
 
   <script>
